--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -5,11 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
   <title>test</title>
+  <link rel="stylesheet" href="/global.css">
 </head>
 
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script src="/__build__/shared.js"></script>
+  <script src="/__build__/basic.js"></script>
 </body>
 
 </html>
