新增一个hash模式的示例，用来调试

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,8 @@
 <body style="padding: 0 20px">
     <h1>Vue Router Storage Examples</h1>
     <ul>
-        <li><a href="basic">Basic</a></li>
+        <li><a href="html5">Html5 history mode</a></li>
+        <li><a href="hash">Hash mode</a></li>
     </ul>
 </body>
 
