--- a/examples/hash/index.html
+++ b/examples/hash/index.html
@@ -12,7 +12,7 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
   <script src="/__build__/shared.js"></script>
-  <script src="/__build__/basic.js"></script>
+  <script src="/__build__/hash.js"></script>
 </body>
 
 </html>
